--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,15 +16,31 @@
     <div class="alert alert-primary" role="alert" th:if="${message}" th:text="${message}">
     </div>
     <form id="keywordForm" th:action="@{/rocketpunch}" th:method="get">
-        <h2>로켓펀치 채용 정보 크롤링</h2>
         <div id="inputBox">
 
         </div>
         <input name="keywords" placeholder="키워드를 입력하세요">
         <button id="keyowrdAddBtn" type="button">키워드 추가</button>
+
+        <div class="col-8">
+            <div class="row">
+                <h2 class="col-12">로켓펀치 채용 정보</h2>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="alert alert-info" role="alert">
+                        크롤링을 하고 싶은 키워드를 입력하세요.
+                    </div>
+                    <!--<div id="whitelist" th:text="${whitelist}" hidden></div>-->
+                    <input id="tags" type="text" name="tags" th:value="${#strings.listJoin(keywords, ',')}"
+                           class="tagify-outside" aria-describedby="tagHelp"/>
+                </div>
+            </div>
+        </div>
+
         <button id="formBtn" type="submit">제출</button>
     </form>
-    <div class="card mb-3" style="max-width: 1200px;" th:each="company : ${clist}">
+    <div class="card mb-3" style="max-width: 1200px;" th:each="company : ${companyDtoList}">
         <div class="row g-0">
             <div class="col-md-1 logo">
                 <img th:src="${company.getLogo()}" alt="...">
@@ -34,7 +50,7 @@
                     <a th:href="${company.getLink()}"><h5 class="card-title" th:text="${company.getName()}">Card title</h5></a>
                     <p class="card-text" th:text="${company.getDetail()}">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-                <div class="card-footer" th:each="job : ${company.getJobList()}">
+                <div class="card-footer" th:each="job : ${company.getJobs()}">
                     <a th:href="${job.getLink()}"><small class="text-muted" th:text="${job.getName()}">Last updated 3 mins ago</small></a>
                     <small class="text-muted" th:text="${job.getStat()}">Last updated 3 mins ago</small>
                     <small class="text-muted" th:text="${job.getDate()}">Last updated 3 mins ago</small>
@@ -42,7 +58,47 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12 col-md-5">
+            <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">전체 [[${pageResultDTO.getTotalPage()}]]개의 페이지 중 [[${pageResultDTO.getPage()}]]번째 페이지</div>
+        </div>
+        <div class="col-sm-12 col-md-7">
+            <div class="dataTables_paginate paging_simple_numbers" id="dataTable_paginate">
+                <ul class="pagination">
+                    <li th:if="${pageResultDTO.isPrev()}" class="paginate_button page-item previous disabled" id="dataTable_previous">
+                        <a th:href="@{/(page = ${pageResultDTO.getStart()-10}, size = ${pageRequestDTO.getSize()}, keyword = ${pageRequestDTO.getKeyword()})}" aria-controls="dataTable" data-dt-idx="1"  tabindex="0" class="page-link">Previous</a>
+                    </li>
+                    <li th:class="'paginate_button page-item ' + ${pageResultDTO.getPage() == page ? 'active' : ''}" th:each="page : ${pageResultDTO.getPageList()}">
+                        <a th:href="@{/(page = ${page}, size = ${pageRequestDTO.getSize()}, keyword = ${pageRequestDTO.getKeyword()})}" aria-controls="dataTable" data-dt-idx="1" tabindex="0" class="page-link">[[${page}]]</a>
+                    </li>
+                    <li th:if="${pageResultDTO.isNext()}" class="paginate_button page-item next disabled" id="dataTable_next">
+                        <a  th:href="@{/(page = ${pageResultDTO.getStart()+10}, size = ${pageRequestDTO.getSize()}, keyword = ${pageRequestDTO.getKeyword()})}" aria-controls="dataTable" data-dt-idx="1"  tabindex="0" class="page-link">Next</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
+<script src="/node_modules/@yaireo/tagify/dist/tagify.min.js"></script>
+<script type="application/javascript">
+    $(function () {
+        let tagInput = document.querySelector("#tags");
+
+        let tagify = new Tagify(tagInput, {
+            pattern: /^.{0,20}$/,
+            whitelist : JSON.parse(document.querySelector("#whitelist").textContent),
+            dropdown : {
+                enabled: 1, // suggest tags after a single character input
+            } // map tags
+        });
+
+        // add a class to Tagify's input element
+        tagify.DOM.input.classList.add('form-control');
+        // re-place Tagify's input element outside of the  element (tagify.DOM.scope), just before it
+        tagify.DOM.scope.parentNode.insertBefore(tagify.DOM.input, tagify.DOM.scope);
+
+    });
+</script>
 <script>
     const keywordAddBtn = document.querySelector("#keyowrdAddBtn"),
              inputBox = document.querySelector("#inputBox");
